# Sui-Sprout-Hackathon

./: README.md  README.zh-TW.md
#1 Sui-Taiwan-Lottery/: README.md
#2 sui-client-online/: README.md  package-lock.json  package.json  pnpm-lock.yaml
#3 minesweaper/: .gitignore  Move.toml  Pub.devnet.toml  Published.toml  README.md  deploy.mjs
BaleenPay/: README.md
Cohortvault/: .env.example  .gitignore  README-DEPLOY.md  README.md  package.json  turbo.json
Cohortvault/apps/api/: package.json  pyproject.toml  pyrightconfig.json
Cohortvault/apps/api/app/: attestation.py  capabilities.py  config.py  content.py  embeddings.py  llm.py  main.py  migrate.py  schemas.py  session_auth.py  storage.py  store.py  store_postgres.py  vault.py
Cohortvault/apps/api/migrations/: 0002_create_core_tables.sql  0003_update_embedding_dimension.sql  0004_add_secret_encrypted_blob.sql  0005_add_signed_receipt_fields.sql  0006_add_secret_capabilities.sql  0007_ingestion_hardening.sql  0008_run_source_metadata.sql
Cohortvault/apps/api/tests/: conftest.py  test_permissions.py  test_receipts.py  test_secret_revocation.py  test_worker.py
Cohortvault/cohortvault/apps/api/: package.json  pyproject.toml
Cohortvault/cohortvault/apps/api/app/: __init__.py  config.py  content.py  embeddings.py  main.py  migrate.py  schemas.py  store.py  store_postgres.py  store_sqlite.py
Cthulhu Web3 Protocol/: README.md
Octopus/: .dockerignore  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
OracleFi/: README.md
ParkFi/: README.md
Robinhood-launchpad-final/: README.md
(+369 files in other folders)
