[project]
name = "cohortvault-api"
version = "0.1.0"
description = "FastAPI service for the CohortVault hackathon scaffold"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0",
  "fastapi>=0.116.1,<1.0.0",
  "openai>=1.30.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "psycopg-pool>=3.2.6,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
