[project]
name = "cohortvault-api"
version = "0.1.0"
description = "FastAPI service for the CohortVault hackathon scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "psycopg-pool>=3.2.6,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
